--- a/13-vuejs/13-emits/package.json
+++ b/13-vuejs/13-emits/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "12-props",
+  "name": "13-emits",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,13 +7,11 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
-    "canvas-confetti": "^1.5.1",
-    "jenesius-vue-modal": "^1.5.0",
     "vue": "^3.2.33"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.5"
